# trading-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.production.yaml  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
deploy/systemd/: hibachi-collect-monitor.service  hibachi-collect-monitor.timer
deploy/zabbix/: hibachi-collect.conf
docs/: collect_only_operations.md  deployment_plan.md  milestone4_admission_review.md  monitoring.md  operations_runbook.md  paper_admission.md  retention_readiness.md  timestamp_quality_invariants.md
migrations/: env.py
migrations/versions/: 20260715_0001_event_storage.py
scripts/: collect_monitor.py  collect_ops.sh  collect_quality.py  e2e_collect.ps1  install_zabbix_monitoring.sh  restart_state.py  rollback_zabbix_monitoring.sh  storage_state.py  validate_zabbix_monitoring.sh  zabbix_cache.py
src/trading_bot/: __init__.py  __main__.py  cli.py  collector.py  config.py  exchange.py  healthcheck.py  paper.py  service.py
tests/: test_admission.py  test_cli.py  test_collect_monitor.py  test_collect_quality.py  test_collector.py  test_config.py  test_dashboard.py  test_deployment_config.py  test_exchange.py  test_healthcheck.py  test_maintenance.py  test_momentum_evaluator.py  test_operations_interface.py  test_paper.py  test_research_dataset.py  test_research_quality.py  test_research_replay.py  test_restart_state.py  test_service.py  test_storage_models.py  test_storage_state.py  test_versioned_exporter.py  test_zabbix_cache.py
tests/integration/: database.py  (+5 more)
(+17 files in other folders)
